<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/holding_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/input_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/import_action_ks"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <com.alphawallet.app.widget.PasswordInputView
            android:id="@+id/input_keystore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cozy_20"
            android:layout_marginBottom="@dimen/standard_16"
            custom:imeOptions="actionDone"
            custom:label="@string/hint_keystore"
            custom:lines="6"
            custom:minHeightValue="170" />

        <!-- Paste Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_paste_keystore"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/standard_16"
            android:text="@string/paste"
            android:textSize="13sp"
            android:textColor="?colorPrimary"
            android:textAllCaps="false"
            app:icon="@drawable/ic_paste"
            app:iconSize="18dp"
            app:iconPadding="6dp"
            app:iconTint="?colorPrimary"
            app:strokeColor="?colorPrimary"
            app:strokeWidth="1dp"
            app:cornerRadius="20dp" />

        <com.alphawallet.app.widget.PasswordInputView
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/comfy_28"
            android:visibility="gone"
            custom:imeOptions="actionDone"
            custom:inputType="textPassword"
            custom:label="@string/enter_password"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_password_notice"
            style="@style/Aw.Typography.Sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_16"
            android:text="@string/remember_your_password"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/import_action_ks"
        style="@style/Aw.Component.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/standard_16"
        android:text="@string/action_continue" />

    <LinearLayout
        android:id="@+id/bottom_marker_ks"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/import_text"
        style="@style/Aw.Typography.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/import_action_ks"
        android:layout_below="@id/input_view_layout"
        android:layout_marginStart="@dimen/large_32"
        android:layout_marginEnd="@dimen/large_32"
        android:gravity="center_horizontal|bottom"
        android:text="@string/or_paste_keystore_json"
        android:visibility="gone" />
</RelativeLayout>
